Description of Picture

--- a/week02/index.html
+++ b/week02/index.html
@@ -11,6 +11,6 @@ alt="a cut cat wearing glasses"
 <body>
   <h1>Using a cat image in the page.</h1>
   <img src="https://vt2106.github.io/week02/cat-984097_1920.jpg"
-  alt="a cut cat wearing glasses">
+  alt="a cute kitten wearing glasses" width="600" height="700">
 </body>
 </html>
