Files have been edited

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -51,7 +51,7 @@
   <li>Roll out to about 5mm. Cut into shapes.</li>
   <li>Bake for 25 minutes or until golden brown.</li>
 </ol>
-
+  <p><a href="vt2106.github.io/week02/index.html">Visit the kitten image page</a></p>
   <footer style= "text-align: center;">
     <p>
       Footer 2021 "Victor Trejo"
