Edited mutiple files

--- a/week02/index.html
+++ b/week02/index.html
@@ -9,6 +9,6 @@
   <h1>Using a cat image in the page.</h1>
   <img src="https://vt2106.github.io/week02/kitten_with_glasses.jpg"
   alt="a cute kitten wearing glasses" width="700" height="350">
-  <p><a href="vt2106.github.io/week02/coding101.html">Visit the HTML test page</a></p>
+  <p><a href="https://vt2106.github.io/week02/coding101.html">Visit the HTML test page</a></p>
 </body>
 </html>
