Added back missing codepen page

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -10,6 +10,7 @@
 <p>A simple paragraph of text.<br>
   This is the second line
 </p>
+<p><a herf="https://codepen.io/vt2106/pen/KKNwooB?editors=1000">I have a working copy of this page on codepen</a></p>
 <p style="color: blue;">A simple paragraph of text.</p>
 
   <h1>My website is all about food</h1>
